[package]
name = "arti-sample-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arti-client = "0.8.1"
arti-hyper = { version = "0.8.1", features = ["default"]}
tokio = { version = "1.7", features = ["full"] }
hyper = { version = "0.14", features = ["http1", "client", "runtime"] }
tls-api = "0.9.0"
tls-api-native-tls = "0.9.0"
tor-rtcompat = "0.8.1"
memmap2 = "0.5.8"
