[package]
name = "connection-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arti-client = { version = "0.9.0", features = ["bridge-client"] }
arti-hyper = { version = "0.9.0", features = ["default"]}
tokio = { version = "1.7", features = ["full"] }
tracing = "0.1"
tor-rtcompat = "0.9.0"
tracing-subscriber = "0.2.0"
tls-api = "0.9.0"
tls-api-native-tls = "0.9.0"
hyper = { version = "0.14", features = [ "client" , "runtime" ]}