[package]
name = "dns-resolver"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use latest arti-client from GitLab to connect to Tor network
arti-client = { git = "https://gitlab.torproject.org/tpo/core/arti" , features = ["bridge-client"] }
# Specify which async framework we wish to use
tokio = { version = "1.7", features = ["full"] }
# TLS related crates
tls-api = "0.9.0"
tls-api-native-tls = "0.9.0"
# This crate helps abstract over a particular async framework for Arti
# We need PreferredRuntime from it for some type annotations
tor-rtcompat = "0.9.1"
# Useful to print debugging or log messages in async programs
tracing = "0.1"
tracing-subscriber = "0.2.0"