[package]
name = "obfs4-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arti-client = { version = "0.9.1", features = [ "bridge-client", "pt-client", "experimental" ] }
tor-chanmgr = { version = "0.9.1", features = [ "pt-client" ] }
arti-hyper = { version = "0.9.1", features = ["default"]}
tokio = { version = "1.7", features = ["full"] }
tracing = "0.1"
tor-rtcompat = "0.9.1"
tracing-subscriber = "0.2.0"
tls-api = "0.9.0"
tls-api-native-tls = "0.9.0"
hyper = { version = "0.14", features = [ "client" , "runtime" ]}
tor-error = "0.5.1"
